--- a/page_new.html
+++ b/page_new.html
@@ -198,24 +198,100 @@
       .content__content hr {
         border: none;
         height: 1px;
-        background-color: #0054a6;
+        background-color: #3376b8;
       }
+
       /* /Main Content */
 
       /* Main Content Header */
-      .content__data{
-        display: flex;
-      }
-      .content__data > div{
-        width: 50%;
-        padding: 20px;
-        border: 1px solid #0054a6;
-      }
-
-      .control_date{
+      .content__data {
+        margin-top: 25px;
         display: flex;
         gap: 20px;
+      }
+
+      .content__data > div {
+        width: 50%;
+      }
+
+      .content__info {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+      }
+
+      .calendar-header {
+        display: flex;
         justify-content: space-between;
+        align-items: center;
+        font-size: 18px;
+        margin-bottom: 10px;
+      }
+
+      .calendar-header input {
+        width: 150px;
+        border: 0px solid #3376b8;
+        border-radius: 5px;
+        padding-left: 10px;
+        padding-right: 5px;
+        height: 30px;
+        background-color: #3376b8;
+        color: white;
+      }
+
+      table {
+        width: 100%;
+        border-collapse: collapse;
+        font-size: 12px;
+      }
+
+      th,
+      td {
+        padding: 10px;
+        text-align: center;
+        cursor: pointer;
+        border: 1px solid #3376b8;
+      }
+
+      th {
+        background-color: #3376b834;
+      }
+
+      td:hover {
+        background: #3376b834;
+      }
+
+      tbody tr:nth-child(even) {
+        background-color: #3376b80c;
+      }
+
+      .selected {
+        background: #3376b8;
+        color: white;
+      }
+
+      .action_section {
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        gap: 15px;
+      }
+
+      button {
+        background-color: #3376b8;
+        height: 30px;
+        border: 0;
+        border-radius: 5px;
+        color: white;
+        padding: 5px 10px;
+        cursor: pointer;
+      }
+
+      button.red {
+        background-color: #ff0000;
+      }
+      button.green {
+        background-color: #008f0a;
       }
 
       /* /Main Content Header */
@@ -294,29 +370,208 @@
         <!-- Main Content -->
         <div class="content__content">
           <!-- Main Content Header -->
-          <h1>현업초과근무 등록</h1>
-          <hr>
+          <h1>일반 초과관리</h1>
+          <hr />
 
           <div class="content__data">
-
-            <div>
-              <form action="" class="control_date">
-                <label for="">Date</label>
-                <input type="month" name="" id="">
-              </form>
+            <div class="calendar">
+              <div class="calendar-header">
+                <button id="today">Today</button>
+                <div>
+                  <input type="month" id="monthPicker" />
+                  <button id="prevMonth">▲</button>
+                  <button id="nextMonth">▼</button>
+                </div>
+              </div>
+              <table>
+                <thead>
+                  <tr>
+                    <th>Su</th>
+                    <th>Mo</th>
+                    <th>Tu</th>
+                    <th>We</th>
+                    <th>Th</th>
+                    <th>Fr</th>
+                    <th>Sa</th>
+                  </tr>
+                </thead>
+                <tbody id="calendarBody"></tbody>
+              </table>
             </div>
 
-            <div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam mollitia repudiandae beatae ducimus, voluptatem, ex consectetur quaerat corrupti voluptate iusto at? Aliquid laborum temporibus commodi ipsum magnam neque dignissimos molestias voluptates, inventore debitis, mollitia ducimus totam dolore suscipit omnis sint? Sunt, cum voluptate fugiat voluptas harum quisquam facere animi fuga eligendi suscipit iste nostrum earum quod? Itaque aliquam cumque dolorem excepturi et, unde maiores modi adipisci vel quia obcaecati facere? Accusantium accusamus dolorem sequi velit. Sed neque quos saepe soluta suscipit necessitatibus commodi aliquid ea. Esse, blanditiis! Quae porro impedit rem, repellat temporibus recusandae aspernatur quisquam? Molestias consequatur deleniti iusto consectetur eaque modi vero cum saepe praesentium harum odio ab cumque laborum voluptate, corrupti voluptatum dolorum perspiciatis quo magnam mollitia enim exercitationem commodi. Minus odio laudantium dolore vel neque molestias labore placeat asperiores adipisci inventore nostrum, consequuntur recusandae impedit, iure officiis ullam tenetur beatae. Perferendis provident quia sunt quibusdam, minus quo distinctio. Non harum quo esse ex modi aliquam assumenda deleniti veniam iste. Non dolorem in blanditiis vitae voluptates quisquam facere dolorum! Quo velit omnis saepe commodi itaque possimus excepturi, quidem quibusdam quam exercitationem placeat asperiores. Quam similique sit, accusantium tenetur fugit autem placeat iste! Quidem sint odit praesentium placeat enim alias doloribus, sapiente voluptates. Nulla excepturi labore quasi eos laborum at nostrum quis consequuntur assumenda tempore ex, minima quidem. Tempora eum veritatis doloribus hic cupiditate modi necessitatibus beatae ullam impedit deleniti vel maiores illum, ea natus iusto labore praesentium incidunt tenetur deserunt cumque magnam. Libero in perferendis tenetur qui, odit ab enim accusamus quos aliquid commodi architecto, quisquam minima quis eius sunt! Cupiditate, consequatur quod. Error perspiciatis id blanditiis ipsam similique cumque distinctio obcaecati sit laboriosam explicabo! Sunt et deleniti, quaerat molestias quod eum quas, consequuntur iste eos placeat ab nam omnis hic in ut recusandae? Alias, iusto explicabo?
-              </p>
-            </div>
+            <div class="content__info">
+              <table>
+                <thead>
+                  <tr>
+                    <th>№</th>
+                    <th>NAME</th>
+                    <th>STATUS</th>
+                    <th>DATE</th>
+                    <th>TIME</th>
+                    <th>FREE</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>1</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                  </tr>
+                </tbody>
+              </table>
 
+              <table>
+                <thead>
+                  <tr>
+                    <th>NAME</th>
+                    <th>ELEMENT</th>
+                    <th>DATA</th>
+                    <th>TIME</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>table_element</td>
+                    <td>table_element</td>
+                    <td>date</td>
+                    <td>time</td>
+                  </tr>
+                  <tr>
+                    <td>table_element</td>
+                    <td>table_element</td>
+                    <td>date</td>
+                    <td>time</td>
+                  </tr>
+                  <tr>
+                    <td>table_element</td>
+                    <td>table_element</td>
+                    <td>date</td>
+                    <td>time</td>
+                  </tr>
+                  <tr>
+                    <td>table_element</td>
+                    <td>table_element</td>
+                    <td>date</td>
+                    <td>time</td>
+                  </tr>
+                  <tr>
+                    <td>table_element</td>
+                    <td>table_element</td>
+                    <td>date</td>
+                    <td>time</td>
+                  </tr>
+                </tbody>
+              </table>
+
+              <div class="action_section">
+                <button class="red">Delete</button>
+                <button class="red">Delete All</button>
+                <button class="green">Add</button>
+                <button>Edit</button>
+                <button>Clear</button>
+                <button>Change</button>
+              </div>
+            </div>
           </div>
         </div>
         <!-- Main Content -->
       </section>
     </div>
     <!-- /Content section -->
+
+    <!-- JS -->
+    <script>
+      const calendarBody = document.getElementById("calendarBody");
+      const prevMonthBtn = document.getElementById("prevMonth");
+      const nextMonthBtn = document.getElementById("nextMonth");
+      const todayBtn = document.getElementById("today");
+      const monthPicker = document.getElementById("monthPicker");
+
+      let currentDate = new Date();
+      let selectedDate = new Date();
+
+      monthPicker.value = currentDate.toISOString().slice(0, 7);
+
+      function renderCalendar(date) {
+        calendarBody.innerHTML = "";
+        const year = date.getFullYear();
+        const month = date.getMonth();
+
+        monthPicker.value = `${year}-${String(month + 1).padStart(2, "0")}`;
+
+        const firstDay = new Date(year, month, 1).getDay();
+        const lastDate = new Date(year, month + 1, 0).getDate();
+
+        let row = document.createElement("tr");
+
+        for (let i = 0; i < firstDay; i++) {
+          row.appendChild(document.createElement("td"));
+        }
+
+        for (let day = 1; day <= lastDate; day++) {
+          const cell = document.createElement("td");
+          cell.textContent = day;
+
+          if (
+            selectedDate.getDate() === day &&
+            selectedDate.getMonth() === month &&
+            selectedDate.getFullYear() === year
+          ) {
+            cell.classList.add("selected");
+          }
+
+          cell.addEventListener("click", () => {
+            selectedDate = new Date(year, month, day);
+            renderCalendar(date);
+          });
+
+          row.appendChild(cell);
+
+          if ((firstDay + day) % 7 === 0) {
+            calendarBody.appendChild(row);
+            row = document.createElement("tr");
+          }
+        }
+
+        if (row.children.length > 0) {
+          calendarBody.appendChild(row);
+        }
+      }
+
+      monthPicker.addEventListener("change", () => {
+        const [year, month] = monthPicker.value.split("-").map(Number);
+        currentDate = new Date(year, month - 1, 1);
+        renderCalendar(currentDate);
+      });
+
+      prevMonthBtn.addEventListener("click", () => {
+        currentDate.setMonth(currentDate.getMonth() - 1);
+        renderCalendar(currentDate);
+      });
+
+      nextMonthBtn.addEventListener("click", () => {
+        currentDate.setMonth(currentDate.getMonth() + 1);
+        renderCalendar(currentDate);
+      });
+
+      todayBtn.addEventListener("click", () => {
+        currentDate = new Date();
+        selectedDate = new Date();
+        renderCalendar(currentDate);
+      });
+
+      renderCalendar(currentDate);
+    </script>
   </body>
 </html>
